bin/tests/errors/sema/sema_err_let_missing_init.swg
#global fileprivate

#test
{
    let L0: s32 // swc-expected-error {{sema_err_let_missing_init}}
}
